<?xml version="1.0"?>
<package>

  <name>dvrk_bridges</name>
  <version>0.0.0</version>

  <description>The dvrk_bridges package, cisstMultiTask components
  derived from the cisst_ros_bridge class to replicate the
  sawIntuitiveResearchKit interfaces for ROS.</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_intuitive_research_kit</build_depend>
  <build_depend>cisst_msgs</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>saw_intuitive_research_kit</run_depend>
  <run_depend>cisst_msgs</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
