<?xml version="1.0"?>
<package>
  <name>dvrk_kinematics</name>
  <version>0.0.0</version>
  <description>The dvrk_kinematics package</description>

  <maintainer email="zihan@jhu.edu">Zihan Chen</maintainer>
  <license>CISST</license>

  <author email="zihan.chen@jhu.edu">Zihan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
