<?xml version="1.0"?>
<package>
  <name>dvrk_python</name>
  <version>2.1.0</version>
  <description>The dVRK Python package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>CISST</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
