<?xml version="1.0"?>
<package>
  <name>dvrk_teleop</name>
  <version>0.0.0</version>
  <description>The dvrk_teleop package</description>

  <maintainer email="zihan@jhu.edu">Zihan Chen</maintainer>
  <license>CISST</license>
  <author email="zihan.chen@jhu.edu">Zihan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>dvrk_kinematics</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>dvrk_kinematics</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
  </export>
</package>
