<?xml version="1.0"?>
<package>
  <name>dvrk_video</name>
  <version>2.2.1</version>
  <description>The dVRK video package</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>CISST</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
