<package>
  <name>dvrk_arms_from_ros</name>
  <version>1.7.1</version>
  <description>
  sawIntuitiveResearchKit compatible arm from ROS topics
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-dvrk/dvrk_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_intuitive_research_kit</build_depend>
  <build_depend>cisst_msgs</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>saw_intuitive_research_kit</run_depend>
  <run_depend>cisst_msgs</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
